# ocp-feedstock

./: .recipe_maintainers.json  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_64_.yaml  linux_64_python3.10.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.12.____cpython.yaml  linux_64_python3.13.____cp313.yaml  linux_64_python3.14.____cp314.yaml  linux_64_python3.7.____cpython.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____cpython.yaml  linux_aarch64_python3.10.____cpython.yaml  linux_aarch64_python3.11.____cpython.yaml  linux_aarch64_python3.12.____cpython.yaml  linux_aarch64_python3.13.____cp313.yaml  linux_aarch64_python3.14.____cp314.yaml  linux_aarch64_python3.8.____cpython.yaml  linux_aarch64_python3.9.____cpython.yaml  linux_ppc64le_python3.10.____cpython.yaml  linux_ppc64le_python3.11.____cpython.yaml  linux_ppc64le_python3.12.____cpython.yaml  linux_ppc64le_python3.13.____cp313.yaml  linux_ppc64le_python3.8.____cpython.yaml  linux_ppc64le_python3.9.____cpython.yaml  osx_64_.yaml  osx_64_python3.10.____cpython.yaml  osx_64_python3.11.____cpython.yaml  osx_64_python3.12.____cpython.yaml  osx_64_python3.13.____cp313.yaml  osx_64_python3.14.____cp314.yaml  osx_64_python3.7.____cpython.yaml  osx_64_python3.8.____cpython.yaml  osx_64_python3.9.____cpython.yaml  osx_arm64_.yaml  osx_arm64_python3.10.____cpython.yaml  osx_arm64_python3.11.____cpython.yaml  osx_arm64_python3.12.____cpython.yaml  osx_arm64_python3.13.____cp313.yaml  osx_arm64_python3.14.____cp314.yaml  osx_arm64_python3.8.____cpython.yaml  osx_arm64_python3.9.____cpython.yaml  win_64_.yaml  (+8 more)
.github/: CODEOWNERS
.scripts/: build_steps.sh
recipe/: CMakeLists-Zm10-win.patch  CMakeLists-Zm10.patch  CMakeLists-win.patch  CMakeLists.patch  CMakeLists.txt  FindVTK.cmake  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
